# indico-plugin-themes-awesome

./: .gitignore  AUTHORS.md  LICENSE.md  MANIFEST.in  README.md  setup.cfg  webpack-bundles.json
indico_themes_awesome/: plugin.py  themes-awesome.yaml
indico_themes_awesome/themes/: foo.scss
