[metadata]
name = indico-plugin-themes-awesome
version = 0.0.1
description = A Plugin Themes Awesome demonstration for Indico Software
long_description = file: README.md, AUTHORS.md, CHANGES.md, LICENSE.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/macagua/indico-plugin-themes-awesome
license = MIT
author = Leonardo Caballero
author_email = leonardocaballero@gmail.com
platform = linux
classifiers =
    Development Status :: 1 - Planning
    Environment :: Console
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Flask
    Intended Audience :: Education
    Intended Audience :: Information Technology
    Intended Audience :: Science/Research
    Intended Audience :: Other Audience
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: JavaScript
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Topic :: Database
    Topic :: Database :: Database Engines/Servers
    Topic :: Text Processing :: Markup :: HTML

project_urls =
    Blog = https://lcaballero.wordpress.com/tag/indico/
    Community = https://t.me/macagua
    Changelog = https://github.com/macagua/indico-plugin-themes-awesome/blob/main/CHANGES.md
    Releases = https://github.com/macagua/indico-plugin-themes-awesome/releases
    Issues = https://github.com/macagua/indico-plugin-themes-awesome/issues
    GitHub = https://github.com/macagua/indico-plugin-themes-awesome

[options]
packages = find:
zip_safe = false
include_package_data = true
python_requires = >=3.9.0, <3.11
install_requires =
    indico>=3.2

[options.entry_points]
indico.plugins =
    themes_awesome = indico_themes_awesome.plugin:AwesomeThemesPlugin

[pydocstyle]
ignore = D100,D101,D102,D103,D104,D105,D107,D203,D213

